--- a/components/chat-button.html
+++ b/components/chat-button.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>Gate · ISLE Editor Documentation</title>
+        <title>Chat Button · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.2">
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="../chapters/group-interaction.html" />
+    <link rel="next" href="hint-button.html" />
     
     
-    <link rel="prev" href="feedback.html" />
+    <link rel="prev" href="../internal-components.html" />
     
 
     </head>
@@ -379,7 +379,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.8" data-path="gate.html">
+        <li class="chapter " data-level="1.4.8" data-path="gate.html">
             
                 <a href="gate.html">
             
@@ -1574,7 +1574,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.6.1" data-path="chat-button.html">
+        <li class="chapter active" data-level="1.6.1" data-path="chat-button.html">
             
                 <a href="chat-button.html">
             
@@ -1661,7 +1661,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >Gate</a>
+        <a href=".." >Chat Button</a>
     </h1>
 </div>
 
@@ -1676,25 +1676,7 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="gate">Gate</h1>
-<p>An ISLE component that allows to display its children only to reserved audiences.</p>
-<h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Gate 
-    banner<span class="token operator">=</span><span class="token punctuation">{</span><span class="token string">&quot;&lt;div&gt;You have to be logged in to see the image&lt;/div&gt;&quot;</span><span class="token punctuation">}</span>
-    user 
-<span class="token operator">&gt;</span>
-    <span class="token operator">&lt;</span>h1<span class="token operator">&gt;</span>For teachers only<span class="token operator">&lt;</span><span class="token operator">/</span>div<span class="token operator">&gt;</span>
-<span class="token operator">&lt;</span><span class="token operator">/</span>Gate<span class="token operator">&gt;</span>
-</code></pre>
-<p><a href="https://isle.heinz.cmu.edu/components/gate/" target="_blank">Open interactive preview</a></p>
-<h4 id="options">Options:</h4>
-<ul>
-<li><strong>anonymous</strong>: when set the gated content is displayed to anybody</li>
-<li><strong>user</strong>: when set the gated content is displayed to subscribed users.</li>
-<li><strong>enrolled</strong>: when set the gated content is displayed to the students enrolled in the course</li>
-<li><strong>owner</strong>: when set the gated content is displayed to the owner of the course (usually the instructor)</li>
-<li><strong>banner</strong>: a message which is visible to the visitors lacking the gate privilege</li>
-</ul>
+                                <h1 id="chat-button">Chat Button</h1>
 
                                 
                                 </section>
@@ -1722,12 +1704,12 @@
 
             
                 
-                <a href="feedback.html" class="navigation navigation-prev " aria-label="Previous page: Feedback">
+                <a href="../internal-components.html" class="navigation navigation-prev " aria-label="Previous page: Internal Components">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="../chapters/group-interaction.html" class="navigation navigation-next " aria-label="Next page: Group Interaction">
+                <a href="hint-button.html" class="navigation navigation-next " aria-label="Next page: Hint Button">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1738,7 +1720,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Gate","level":"1.4.8","depth":2,"next":{"title":"Group Interaction","level":"1.4.9","depth":2,"path":"chapters/group-interaction.md","ref":"chapters/group-interaction.md","articles":[{"title":"Free Text Survey","level":"1.4.9.1","depth":3,"path":"components/free-text-survey.md","ref":"components/free-text-survey.md","articles":[]},{"title":"Number Survey","level":"1.4.9.2","depth":3,"path":"components/number-survey.md","ref":"components/number-survey.md","articles":[]},{"title":"Proportions Survey","level":"1.4.9.3","depth":3,"path":"components/proportions-survey.md","ref":"components/proportions-survey.md","articles":[]},{"title":"Survey Generator","level":"1.4.9.4","depth":3,"path":"components/survey-generator.md","ref":"components/survey-generator.md","articles":[]}]},"previous":{"title":"Feedback","level":"1.4.7","depth":2,"path":"components/feedback.md","ref":"components/feedback.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/gate.md","mtime":"2017-12-28T11:49:43.606Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Chat Button","level":"1.6.1","depth":2,"next":{"title":"Hint Button","level":"1.6.2","depth":2,"path":"components/hint-button.md","ref":"components/hint-button.md","articles":[]},"previous":{"title":"Internal Components","level":"1.6","depth":1,"path":"internal-components.md","ref":"internal-components.md","articles":[{"title":"Chat Button","level":"1.6.1","depth":2,"path":"components/chat-button.md","ref":"components/chat-button.md","articles":[]},{"title":"Hint Button","level":"1.6.2","depth":2,"path":"components/hint-button.md","ref":"components/hint-button.md","articles":[]},{"title":"Instructor Bar","level":"1.6.3","depth":2,"path":"components/instructor-bar.md","ref":"components/instructor-bar.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/chat-button.md","mtime":"2017-12-30T12:24:25.961Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
