--- a/components/feedback.html
+++ b/components/feedback.html
@@ -1574,9 +1574,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.6.1" data-path="chat-button.md">
+        <li class="chapter " data-level="1.6.1" data-path="chat-button.html">
             
-                <span>
+                <a href="chat-button.html">
             
                     
                     Chat Button
@@ -1587,9 +1587,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.6.2" data-path="hint-button.md">
+        <li class="chapter " data-level="1.6.2" data-path="hint-button.html">
             
-                <span>
+                <a href="hint-button.html">
             
                     
                     Hint Button
@@ -1600,9 +1600,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.6.3" data-path="instructor-bar.md">
+        <li class="chapter " data-level="1.6.3" data-path="instructor-bar.html">
             
-                <span>
+                <a href="instructor-bar.html">
             
                     
                     Instructor Bar
@@ -1733,7 +1733,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Feedback","level":"1.4.7","depth":2,"next":{"title":"Gate","level":"1.4.8","depth":2,"path":"components/gate.md","ref":"components/gate.md","articles":[]},"previous":{"title":"Expire","level":"1.4.6","depth":2,"path":"components/expire.md","ref":"components/expire.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/feedback.md","mtime":"2017-12-27T18:34:01.929Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:15:15.922Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Feedback","level":"1.4.7","depth":2,"next":{"title":"Gate","level":"1.4.8","depth":2,"path":"components/gate.md","ref":"components/gate.md","articles":[]},"previous":{"title":"Expire","level":"1.4.6","depth":2,"path":"components/expire.md","ref":"components/expire.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/feedback.md","mtime":"2017-12-27T18:34:01.929Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
