--- a/components/lesson-submit.html
+++ b/components/lesson-submit.html
@@ -1574,9 +1574,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.6.1" data-path="chat-button.md">
+        <li class="chapter " data-level="1.6.1" data-path="chat-button.html">
             
-                <span>
+                <a href="chat-button.html">
             
                     
                     Chat Button
@@ -1587,9 +1587,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.6.2" data-path="hint-button.md">
+        <li class="chapter " data-level="1.6.2" data-path="hint-button.html">
             
-                <span>
+                <a href="hint-button.html">
             
                     
                     Hint Button
@@ -1600,9 +1600,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.6.3" data-path="instructor-bar.md">
+        <li class="chapter " data-level="1.6.3" data-path="instructor-bar.html">
             
-                <span>
+                <a href="instructor-bar.html">
             
                     
                     Instructor Bar
@@ -1720,7 +1720,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Lesson Submit","level":"1.4.12","depth":2,"next":{"title":"Media","level":"1.4.13","depth":2,"path":"chapters/media.md","ref":"chapters/media.md","articles":[{"title":"IFrame","level":"1.4.13.1","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},{"title":"Image","level":"1.4.13.2","depth":3,"path":"components/image.md","ref":"components/image.md","articles":[]},{"title":"Recorder","level":"1.4.13.3","depth":3,"path":"components/recorder.md","ref":"components/recorder.md","articles":[]},{"title":"Video Player","level":"1.4.13.4","depth":3,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]}]},"previous":{"title":"Voice Input","level":"1.4.11.8","depth":3,"path":"components/voice-input.md","ref":"components/voice-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/lesson-submit.md","mtime":"2016-11-11T08:29:42.360Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:15:15.922Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Lesson Submit","level":"1.4.12","depth":2,"next":{"title":"Media","level":"1.4.13","depth":2,"path":"chapters/media.md","ref":"chapters/media.md","articles":[{"title":"IFrame","level":"1.4.13.1","depth":3,"path":"components/iframe.md","ref":"components/iframe.md","articles":[]},{"title":"Image","level":"1.4.13.2","depth":3,"path":"components/image.md","ref":"components/image.md","articles":[]},{"title":"Recorder","level":"1.4.13.3","depth":3,"path":"components/recorder.md","ref":"components/recorder.md","articles":[]},{"title":"Video Player","level":"1.4.13.4","depth":3,"path":"components/video-player.md","ref":"components/video-player.md","articles":[]}]},"previous":{"title":"Voice Input","level":"1.4.11.8","depth":3,"path":"components/voice-input.md","ref":"components/voice-input.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/lesson-submit.md","mtime":"2016-11-11T08:29:42.360Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:27:22.553Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
